--- a/package.json
+++ b/package.json
@@ -1,48 +1,59 @@
 {
-  "name": "dp-graph-angular",
-  "version": "0.0.1",
-  "description": "program to create a dependency graph of your current project",
-  "private": true,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "webpack-dev-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ChristianLutz/dp-graph-angular.git"
-  },
-  "keywords": [
-    "node",
-    "typescript",
-    "angular",
-    "dependency",
-    "graph"
-  ],
-  "author": "Christian Lutz",
-  "license": "MIT Licence",
-  "bugs": {
-    "url": "https://github.com/ChristianLutz/dp-graph-angular/issues"
-  },
-  "homepage": "https://github.com/ChristianLutz/dp-graph-angular#readme",
-  "devDependencies": {
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "ts-loader": "^6.1.0",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.3",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1"
-  },
-  "dependencies": {
-    "commander": "^3.0.2"
-  },
-  "browser":{
-    "child_process": false
-  }  
+    "name": "dp-graph-angular",
+    "version": "0.0.1",
+    "description": "program to create a dependency graph of your current project",
+    "private": true,
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack",
+        "start": "webpack-dev-server"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ChristianLutz/dp-graph-angular.git"
+    },
+    "keywords": [
+        "node",
+        "typescript",
+        "angular",
+        "dependency",
+        "graph"
+    ],
+    "author": "Christian Lutz",
+    "license": "MIT Licence",
+    "bugs": {
+        "url": "https://github.com/ChristianLutz/dp-graph-angular/issues"
+    },
+    "homepage": "https://github.com/ChristianLutz/dp-graph-angular#readme",
+    "devDependencies": {
+        "@types/d3": "^5.7.2",
+        "@types/jsdom": "^12.2.4",
+        "babel-plugin-syntax-dynamic-import": "^6.18.0",
+        "css-loader": "^3.2.0",
+        "html-webpack-plugin": "^3.2.0",
+        "husky": "^3.0.8",
+        "node-loader": "^0.6.0",
+        "node-sass": "^4.12.0",
+        "prettier": "1.18.2",
+        "pretty-quick": "^1.11.1",
+        "sass-loader": "^8.0.0",
+        "style-loader": "^1.0.0",
+        "ts-loader": "^6.1.0",
+        "tslint": "^5.20.0",
+        "typescript": "^3.6.3",
+        "webpack": "^4.40.2",
+        "webpack-cli": "^3.3.9",
+        "webpack-dev-server": "^3.8.1"
+    },
+    "dependencies": {
+        "canvas": "^2.6.0",
+        "commander": "^3.0.2",
+        "d3": "^5.12.0",
+        "jsdom": "^15.2.0",
+        "ts-polyfill": "^3.5.3",
+        "typescript-parser": "^2.6.1"
+    },
+    "browser": {
+        "child_process": false
+    }
 }
